--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "formik": "^2.2.6",
+    "materialize-css": "^1.0.0-rc.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -16,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start_api": "cd ../api && venv/bin/flask run --no-debugger",
+    "start_api": "cd ../api && venv/bin/flask run --no-debugger"
   },
   "eslintConfig": {
     "extends": [
